Fix overflow of SimplePost

--- a/src/app/notification/components/Notification.module.scss
+++ b/src/app/notification/components/Notification.module.scss
@@ -22,6 +22,7 @@
 }
 
 .endSection {
+  min-width: 0;
   &:has(.mention) {
     grid-row: 1;
     grid-column: 1 / -1;
